# nvx

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  makefile
.github/workflows/: x86-debug.yml  x86-release.yml
doxygen/: doxygen.config
img/: mppa256-libnanvix-test.img  mppa256-migration-circular.img  mppa256-migration-multiple-threads.img  mppa256-migration-parallel-4.img  mppa256-migration-parallel-8.img  mppa256.img  optimsoc.img  qemu-openrisc.img  qemu-riscv32.img  qemu-x86.img  unix64-libnanvix-test.img  unix64.img
include/: nanvix.h
include/nanvix/runtime/: barrier.h  fence.h  stdikc.h
include/nanvix/sys/: condvar.h  dev.h  excp.h  fmutex.h  frame.h  mailbox.h  migration.h  mutex.h  noc.h  page.h  perf.h  portal.h  semaphore.h  signal.h  sync.h  task.h  thread.h
src/: lib.rs  makefile
src/ipc/: message.rs
src/libnanvix/: makefile
src/libnanvix/dev/: write.c
src/libnanvix/etc/: errno.c  exception.c  perf.c
src/libnanvix/ikc/: barrier.c  mailbox.c  migration.c  mportal.c  msync.c  noc.c  portal.c  stdmailbox.c  stdportal.c  stdsync.c  sync.c  task.c  task.h
src/libnanvix/mm/: frame.c  page.c
src/libnanvix/thread/: _exit.c  condvar.c  fence.c  mutex.c  semaphore.c  shutdown.c  signal.c  task.c  thread.c
src/mm/: allocator.rs  mod.rs
src/pm/: mod.rs
src/test/: barrier.c  condvar.c  excp.c  fence.c  frame.c  ikc.c  kmailbox.c  knoc.c  kportal.c  ksync.c  ktask.c  kthread.c  main.c  makefile  migration.c  mutex.c  page.c  perf.c  semaphore.c  signal.c  sleep.c  test.h
ssh/: config  travis_libnanvix_rsa.enc
(+6 files in other folders)
